--- a/src/components/Grid1.css
+++ b/src/components/Grid1.css
@@ -8,7 +8,7 @@
   width: 90vw;
 }
 .grid1 {
-  background-color: yellow;
+/*   background-color: yellow; */
 }
 .grid2 {
   display: inline-grid;
@@ -16,7 +16,7 @@
   row-gap: 10px;
 }
 .gridTwoChild {
-  background-color: red;
+/*   background-color: red; */
   border-radius: 20px;
   width: 100%;
   height: 100%;
